Removed unesearry files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,9 @@ services:
       - no-new-privileges:true
     pids_limit: 200
     read_only: ${MATTERMOST_CONTAINER_READONLY}
+    ports:
+      - ${APP_PORT}:8065
+      - ${CALLS_PORT}:8443/udp
     tmpfs:
       - /tmp
     volumes:
